@@ -354,6 +354,12 @@ Some of the information is specific to the internals of \fBmodulecmd\fP.
 \fIoption\fP is the type of information to be provided, and \fIinfo-args\fP
 are any arguments needed.
 .TP
+.B module-info type
+.RS
+Returns either "C" or "Tcl" to indicate which module command is being
+executed, either the "C" version or the Tcl-only version, to allow the
+modulefile writer to handle any differences between the two.
+.RE
 .B module-info flags
 .RS
 Returns the integer value of \fBmodulecmd's\fP flags state.
