@@ -1,0 +1,30 @@
+#%Module1.0
+
+##############################################################################
+#   Modules Revision 3.0
+#   Providing a flexible user environment
+#
+#   File:		info/%M%
+#   Revision:		%I%
+#   First Edition:	2012/12/06
+#   Last Mod.:		%U%, %G%
+#
+#   Authors:		R.K. Owen, rk@owen.sj.ca.us
+#
+#   Description:	Testuite modulefile
+#   Command:
+#   Sub-Command:	setenv, type
+#
+#   Invocation:		load @M@/@V@
+#   Result:	%R{
+#			setenv	_LMFILES_ 	${_LMFILES_}:@M@/@V@
+#			setenv	LOADEDMODULES	${LOADEDMODULES}:@P@/@M@/@V@
+#			setenv	testsuite	C or Tcl
+#		}R%
+#   Comment:	%C{
+#			The 'type' command returns either 'C' or 'Tcl'
+#		}C%
+#			
+##############################################################################
+
+setenv testsuite "[module-info type]"
